@@ -1,5 +1,4 @@
 require 'bundler'
 Bundler.setup(:default, :development)
 require 'shoe'
-
-Shoe::Tasks.define('shoe.gemspec')
+Shoe.install_tasks
