@@ -1,7 +1,6 @@
 = Next Up
 
 * Bundler automatically sets the LOAD_PATH and takes care of datadir; use it!
-* Say Shoe.install_tasks, like Bundler::GemHelper. (Auto-detect gemspec.)
 * Remove generator, suggesting `bundle gem` instead.
 * Start running on 1.9: Gem::Validator uses MiniTest::Unit.
 
