@@ -1,3 +1,2 @@
 require 'shoe'
-
-Shoe::Tasks.define('<%= name %>.gemspec')
+Shoe.install_tasks
